name:                diagrams-backend-tests
version:             2.0
synopsis:            Backend tests for diagrams
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
data-files:          ref/*.png

cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams.Tests
    Diagrams.Tests.TwoD
    Diagrams.Tests.CmdLine
  other-modules: Paths_diagrams_backend_tests
  other-extensions:
    FlexibleContexts, RankNTypes, DeriveDataTypeable,
    MultiParamTypeClasses, NoMonomorphismRestriction, TypeFamilies
  build-depends:
    base         >=4.9  && <5.0,
    diagrams     >=2.0,
    JuicyPixels,
    bytestring,
    template-haskell,
    diagrams-svg,
    directory,
    exceptions,
    file-embed,
    filepath,
    geometry,
    html,
    lens,
    lucid,
    optparse-generic,
    process,
    text,
    vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
  CPP-options: -DCABAL

executable test-cairo
  main-is: Cairo.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    base         >=4.9  && <5.0,
    diagrams-backend-tests,
    vector,
    JuicyPixels,
    diagrams     >=2.0,
    html,
    lucid,
    text,
    geometry,
    filepath,
    process,
    bytestring,
    diagrams-cairo,
    lens,
    directory

executable test-pgf
  main-is: PGF.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    base         >=4.9  && <5.0,
    diagrams-backend-tests,
    vector,
    JuicyPixels,
    diagrams     >=2.0,
    html,
    lucid,
    text,
    geometry,
    filepath,
    process,
    bytestring,
    diagrams-pgf,
    lens,
    directory

executable test-rasterific
  main-is: Rasterific.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    base         >=4.9  && <5.0,
    diagrams-backend-tests,
    vector,
    JuicyPixels,
    diagrams     >=2.0,
    html,
    lucid,
    text,
    geometry,
    filepath,
    process,
    bytestring,
    diagrams-rasterific,
    lens,
    directory

executable test-svg
  main-is: SVG.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    base         >=4.9  && <5.0,
    diagrams-backend-tests,
    vector,
    JuicyPixels,
    diagrams     >=2.0,
    html,
    lucid,
    text,
    geometry,
    filepath,
    process,
    bytestring,
    diagrams-svg,
    lens,
    directory
