Name:                diagrams-backend-tests
Version:             0.3
Synopsis:            Backend test framework for diagrams
Description:         This package provides a framework for generating
                     diagrams (for specific back ends) and presenting
                     them beside known (golden) images.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill, Jeffrey Rosenbluth, Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Stability:           Experimental
Category:            Graphics, Test
Build-type:          Simple
Cabal-version:       >=1.10
Source-repository head
  type:     git
  location: git://github.com/diagrams/diagrams-backend-tests


Flag all
  Description: Test and compare all backends together
  Default:     False
  Manual:      True

Executable all-test
   if flag (all)
     Build-depends:    base >= 4.2 && < 4.20,
                       html >= 1.0.1.2 && < 2.0,
                       directory,
                       filepath,
                       process,
                       diagrams-core >= 1.3 && < 1.6,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-cairo >= 1.3 && < 1.5,
                       diagrams-svg >= 1.4 && < 1.5,
                       diagrams-postscript >= 1.3 && < 1.6,
                       diagrams-rasterific >= 1.3 && < 1.5,
                       diagrams-pgf,
                       bytestring >= 0.9  && < 0.13,
                       Rasterific >= 0.5 && < 0.8,
                       JuicyPixels >= 3.1.6 && < 3.4,
                       vector >= 0.10.10
     buildable: True
   else
     Build-depends:    base
     buildable:        False
   main-is:           All.hs
   other-modules:     Diagrams.Compare
                      Diagrams.Test.Cairo
                      Diagrams.Test.PGF
                      Diagrams.Test.Postscript
                      Diagrams.Test.Rasterific
                      Diagrams.Test.SVG
                      Diagrams.Tests
   hs-source-dirs:    src, tests
   default-language:  Haskell2010

-- Use cabal configure -fcairo to test the cairo backend
Flag cairo
  Description: Test cairo backend
  Default:     False
  Manual:      True

Executable cairo-test
   if flag(cairo)
     Build-depends:    base >= 4.2 && < 4.20,
                       html >= 1.0.1.2 && < 2.0,
                       directory,
                       filepath,
                       diagrams-core >= 1.3 && < 1.6,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-cairo >= 1.3 && < 1.5,
                       JuicyPixels,
                       vector >= 0.10.10 && < 0.14
     buildable: True
   else
     Build-depends:    base
     buildable: False
   main-is:           Cairo.hs
   hs-source-dirs:    src, tests
   default-language:  Haskell2010

-- Use cabal configure -fsvg to test the SVG backend
Flag svg
  Description: Test SVG backend
  Default:     False
  Manual:      True

Executable svg-test
   if flag(svg)
     Build-depends:    base >= 4.2 && < 4.20,
                       html >= 1.0.1.2 && < 2.0,
                       directory,
                       filepath,
                       diagrams-core >= 1.3 && < 1.6,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-svg >= 1.3 && < 1.5,
                       bytestring >= 0.9 && < 0.13,
                       JuicyPixels,
                       process >=1.2,
                       vector >= 0.10.10 && < 0.14
     buildable: True
   else
     Build-depends:    base
     buildable: False
   main-is:           SVG.hs
   hs-source-dirs:    src, tests
   default-language:  Haskell2010

-- Use cabal configure -frasterific to test the Rasterific backend
Flag rasterific
  Description: Test Rasterific backend
  Default:     False
  Manual:      True

Executable rasterific-test
   if flag(rasterific)
     Build-depends:    base >= 4.2 && < 4.20,
                       html >= 1.0.1.2 && < 2.0,
                       directory,
                       filepath,
                       diagrams-core >= 1.3 && < 1.6,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-rasterific >= 1.3 && < 1.5,
                       Rasterific,
                       FontyFruity,
                       bytestring,
                       JuicyPixels,
                       vector >= 0.10.10 && < 0.14
     buildable: True
   else
     Build-depends:    base
     buildable: False
   main-is:           Rasterific.hs
   hs-source-dirs:    src, tests
   default-language:  Haskell2010

-- Use cabal configure -fcanvas to test the canvas backend
Flag canvas
  Description: Test HTML5 canvas backend
  Default:     False
  Manual:      True

Executable canvas-test
   if flag(canvas)
     Build-depends:    base >= 4.2 && < 4.20,
                       html >= 1.0.1.2 && < 2.0,
                       directory,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-core >= 1.3 && < 1.6,
                       diagrams-canvas >= 0.4 && < 0.5
     buildable: True
   else
     Build-depends:    base
     buildable: False
   main-is:           Canvas.hs
   hs-source-dirs:    src, tests
   default-language:  Haskell2010

-- Use cabal configure -fpostscript to test the postscript backend
Flag postscript
  Description: Test postscript backend
  Default:     False
  Manual:      True

Executable postscript-test
   if flag(postscript)
     Build-depends:    base >= 4.2 && < 4.20,
                       html >= 1.0.1.2 && < 2.0,
                       directory,
                       filepath,
                       process,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-core >= 1.3 && < 1.6,
                       diagrams-postscript >= 1.3 && < 1.5,
                       JuicyPixels >= 3.1.6 && < 3.4,
                       vector >= 0.10.10 && < 0.14
     buildable: True
   else
     Build-depends:    base
     buildable: False
   main-is:           Postscript.hs
   hs-source-dirs:    src, tests
   default-language:  Haskell2010

-- Use cabal configure -fpgf to test the PGF backend
Flag pgf
  Description: Test PGF backend
  Default:     False
  Manual:      True

Executable pgf-test
   if flag(pgf)
     Build-depends:    base >= 4.2 && < 4.20,
                       html >= 1.0.1.2 && < 2.0,
                       directory,
                       filepath,
                       process,
                       vector,
                       JuicyPixels,
                       diagrams-core >= 1.3 && < 1.6,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-pgf
     buildable: True
   else
     Build-depends:    base
     buildable: False
   main-is:           PGF.hs
   hs-source-dirs:    src, tests
   default-language:  Haskell2010
