Name:                diagrams-tests
Version:             0.1
Synopsis:            Test framework for diagrams
Description:         This package provides a framework for generating
                     diagrams (for arbitrary back ends) and presenting
                     them beside known (golden) images.
Homepage:            http://code.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          andygill@ku.edu
Stability:           Experimental
Category:            Graphics, Test
Build-type:          Simple
Cabal-version:       >=1.6
Source-repository head
  type:     git
  location: ???

Library
  Exposed-modules:     Diagrams.Tests
  Hs-source-dirs:      src
  Build-depends:       base >= 4.3 && < 4.5,
                       html >= 1.0.1.2 && < 2.0,
                       diagrams-lib >= 0.5 && < 0.6
