Name:                diagrams-tests
Version:             0.1
Synopsis:            Test framework for diagrams
Description:         This package provides a framework for generating
                     diagrams (for specific back ends) and presenting
                     them beside known (golden) images.
Homepage:            http://code.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          andygill@ku.edu
Stability:           Experimental
Category:            Graphics, Test
Build-type:          Simple
Cabal-version:       >=1.6
Source-repository head
  type:     git
  location: git://github.com/ku-fpg/diagrams-tests.git


-- Use cabal configure -fcanvas to test the canvas backend
Flag canvas
  Description: Test HTML5 canvas backend
  Default:     False

Executable canvas-test
   if flag(canvas)
     Build-depends:    base >= 4.3 && < 4.5,
                       html >= 1.0.1.2 && < 2.0,
                       directory >= 1.1.0.0 && < 1.2,
                       diagrams-lib >= 0.5 && < 0.6,
                       diagrams-canvas >= 0.1 && < 0.2
     buildable: True
   else 
     Build-depends:    base
     buildable: False
   main-is:           Canvas.hs
   hs-source-dirs:    src, tests
